# batstat

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: batinfo.h  totalinfo.h
src/: batinfo.cc  main.cc  totalinfo.cc
